--- a/views/layout.njk
+++ b/views/layout.njk
@@ -26,7 +26,7 @@
   <div id="wrapper">
 
     <!-- Sidebar -->
-    {% include "partials/sidebar.html" %}
+    {% include "partials/sidebar.njk" %}
 
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
@@ -35,7 +35,7 @@
       <div id="content">
 
         <!-- Navbar -->
-        {% include "partials/navbar.html" %}
+        {% include "partials/navbar.njk" %}
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
