--- a/views/layout.njk
+++ b/views/layout.njk
@@ -41,7 +41,11 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
+          <h1 class="h3 mb-4 text-gray-800">{{ pageTitle }}</h1>
+
+          <!-- Main Content -->
+          {% block content %}
+          {% endblock content %}
 
         </div>
         <!-- /.container-fluid -->
