--- a/views/partials/sidebar.njk
+++ b/views/partials/sidebar.njk
@@ -13,7 +13,7 @@
 
   <!-- Nav Item - Dashboard -->
   <li class="nav-item">
-    <a class="nav-link" href="index.html">
+    <a class="nav-link" href="/admin">
       <i class="fas fa-fw fa-tachometer-alt"></i>
       <span>Dashboard</span></a>
   </li>
@@ -28,21 +28,21 @@
 
   <!-- Nav Item - Charts -->
   <li class="nav-item">
-    <a class="nav-link" href="charts.html">
+    <a class="nav-link" href="/admin/categories">
       <i class="fas fa-fw fa-list-alt"></i>
       <span>Category</span></a>
   </li>
 
   <!-- Nav Item - Tables -->
   <li class="nav-item">
-    <a class="nav-link" href="tables.html">
+    <a class="nav-link" href="/admin/banks">
       <i class="fas fa-fw fa-money-check"></i>
       <span>Bank</span></a>
   </li>
 
   <!-- Nav Item - Tables -->
   <li class="nav-item">
-    <a class="nav-link" href="tables.html">
+    <a class="nav-link" href="/admin/items">
       <i class="fas fa-fw fa-hotel"></i>
       <span>Item</span></a>
   </li>
@@ -57,7 +57,7 @@
 
   <!-- Nav Item - Charts -->
   <li class="nav-item">
-    <a class="nav-link" href="charts.html">
+    <a class="nav-link" href="/admin/booking">
       <i class="fas fa-fw fa-shopping-cart"></i>
       <span>Booking</span></a>
   </li>
