--- a/views/layout.njk
+++ b/views/layout.njk
@@ -18,6 +18,9 @@
 
   <!-- Custom styles for this template-->
   <link href="/sb-admin-2/css/sb-admin-2.min.css" rel="stylesheet">
+
+  {% block styles %}
+  {% endblock styles %}
 </head>
 
 <body id="page-top">
@@ -103,5 +106,8 @@
 
   <!-- Custom scripts for all pages-->
   <script src="/sb-admin-2/js/sb-admin-2.min.js"></script>
+
+  {% block scripts %}
+  {% endblock scripts %}
 </body>
 </html>
