--- a/views/admin/category/index.njk
+++ b/views/admin/category/index.njk
@@ -5,7 +5,7 @@
   <!-- DataTales Example -->
   <div class="card shadow mb-4">
     <div class="card-header py-3">
-      <h6 class="m-0 font-weight-bold text-primary">Category Table</h6>
+      <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#addCategoryModal">Add</button>
     </div>
     <div class="card-body">
       <div class="table-responsive">
@@ -18,6 +18,32 @@
             </tr>
           </thead>
         </table>
+      </div>
+    </div>
+  </div>
+
+  <!-- Add Category Modal -->
+  <div class="modal fade" id="addCategoryModal" tabindex="-1" role="dialog" aria-labelledby="addCategoryModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="addCategoryModalLabel">Add Category</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form action="/admin/categories" method="post">
+            <div class="form-group">
+              <label for="inputName">Name</label>
+              <input type="text" name="name" id="inputName" class="form-control">
+            </div>
+            <div class="form-group text-left">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
