--- a/views/admin/category/index.njk
+++ b/views/admin/category/index.njk
@@ -25,8 +25,12 @@
                 <td>{{ loop.index }}</td>
                 <td>{{ category.name }}</td>
                 <td>
-                  <a href="#" class="btn btn-success btn-sm"><i class="fas fa-edit"></i></a>
-                  <a href="#" class="btn btn-warning btn-sm"><i class="fas fa-trash"></i></a>
+                  <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#editCategoryModal" data-name="{{ category.name }}" data-id="{{ category._id }}">
+                    <i class="fas fa-edit"></i>
+                  </button>
+                  <a href="#" class="btn btn-warning btn-sm">
+                    <i class="fas fa-trash"></i>
+                  </a>
                 </td>
               </tr>
             {% endfor %}
@@ -61,6 +65,33 @@
       </div>
     </div>
   </div>
+
+  <!-- Edit Category Modal -->
+  <div class="modal fade" id="editCategoryModal" tabindex="-1" role="dialog" aria-labelledby="editCategoryModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="editCategoryModalLabel">Edit Category</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form action="" method="post">
+            <input type="hidden" name="_method" value="PUT">
+            <div class="form-group">
+              <label for="inputEditName">Name</label>
+              <input type="text" name="name" id="inputEditName" class="form-control" value="">
+            </div>
+            <div class="form-group text-left">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
 
 {% block styles %}
@@ -75,4 +106,20 @@
 
   <!-- Page level custom scripts -->
   <script src="/sb-admin-2/js/demo/datatables-demo.js"></script>
+
+  <script>
+    $(document).ready(function () {
+      $('#editCategoryModal').on('show.bs.modal', (e) => {
+        var button = $(e.relatedTarget)
+
+        var modal = $(this)
+        modal
+          .find('form')
+          .attr('action', '/admin/categories/' + button.data('id'))
+        modal
+          .find('#inputEditName')
+          .val(button.data('name'))
+      })
+    })
+  </script>
 {% endblock scripts %}
