--- a/views/admin/category/index.njk
+++ b/views/admin/category/index.njk
@@ -28,9 +28,9 @@
                   <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#editCategoryModal" data-name="{{ category.name }}" data-id="{{ category._id }}">
                     <i class="fas fa-edit"></i>
                   </button>
-                  <a href="#" class="btn btn-warning btn-sm">
+                  <button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#deleteCategoryModal" data-name="{{ category.name }}" data-id="{{ category._id }}">
                     <i class="fas fa-trash"></i>
-                  </a>
+                  </button>
                 </td>
               </tr>
             {% endfor %}
@@ -85,7 +85,37 @@
             </div>
             <div class="form-group text-left">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Edit Category Modal -->
+  <div class="modal fade" id="deleteCategoryModal" tabindex="-1" role="dialog" aria-labelledby="deleteCategoryModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="deleteCategoryModalLabel">Delete Category</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body text-center">
+          <i class="fas fa-exclamation-triangle fa-5x text-warning"></i>
+
+          <br><br>
+          <h4>Are you sure?</h4>
+          <p>to delete category <strong id="categoryNameDelete"></strong></p>
+
+          <br>
+          <form action="" method="post">
+            <input type="hidden" name="_method" value="DELETE">
+            <div class="form-group">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-danger">Delete</button>
             </div>
           </form>
         </div>
@@ -119,6 +149,13 @@
         modal
           .find('#inputEditName')
           .val(button.data('name'))
+      })
+
+      $('#deleteCategoryModal').on('show.bs.modal', (e) => {
+        var button = $(e.relatedTarget)
+
+        $(this).find('form').attr('action', '/admin/categories/' + button.data('id'))
+        $(this).find('#categoryNameDelete').text(button.data('name'))
       })
     })
   </script>
