dynamic page title

--- a/views/admin/category/index.njk
+++ b/views/admin/category/index.njk
@@ -1,5 +1,5 @@
 {% extends "../../layout.njk" %}
-{% set pageTitle = 'Category' %}
+{% set title = 'Category' %}}
 
 {% block content %}
   <!-- DataTales Example -->
