--- a/views/layout.njk
+++ b/views/layout.njk
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>{{ title }}</title>
+  <title>Staycation | {{ title }}</title>
 
   <!-- Custom fonts for this template-->
   <link href="/sb-admin-2/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -51,7 +51,7 @@
 
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800">{{ pageTitle }}</h1>
+          <h1 class="h3 mb-4 text-gray-800">{{ title }}</h1>
 
           <!-- Main Content -->
           {% block content %}
