--- a/views/admin/bank/index.njk
+++ b/views/admin/bank/index.njk
@@ -5,7 +5,9 @@
   <!-- DataTales Example -->
   <div class="card shadow mb-4">
     <div class="card-header py-3">
-      <h6 class="m-0 font-weight-bold text-primary">Bank Table</h6>
+      <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#addModal">
+        <i class="fas fa-plus"></i>
+      </button>
     </div>
     <div class="card-body">
       <div class="table-responsive">
@@ -23,6 +25,8 @@
       </div>
     </div>
   </div>
+
+  {% include "./modal_add.njk" %}
 {% endblock content %}
 
 {% block styles %}
