--- a/views/admin/bank/index.njk
+++ b/views/admin/bank/index.njk
@@ -30,7 +30,7 @@
                 <td>{{ bank.account_name }}</td>
                 <td>{{ bank.account_number }}</td>
                 <td>
-                  <img src="http://localhost:3002/images/{{ bank.image }}" alt="{{ bank.bank_name }}" width="70px">
+                  <img src="http://localhost:3002/{{ bank.image }}" alt="{{ bank.bank_name }}" width="70px">
                 </td>
                 <td>
                   <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#editModal" data-name="{{ bank.bank_name }}" data-id="{{ bank._id }}">
