fix page bank title

--- a/views/admin/bank/index.njk
+++ b/views/admin/bank/index.njk
@@ -1,5 +1,5 @@
 {% extends "../../layout.njk" %}
-{% set pageTitle = 'Bank' %}
+{% set title = 'Bank' %}
 
 {% block content %}
   <!-- DataTales Example -->
