--- a/views/admin/item/add-item.njk
+++ b/views/admin/item/add-item.njk
@@ -25,7 +25,7 @@
       </div>
       <div class="form-group">
         <label for="inputImage">Choose file...</label>
-        <input type="file" class="form-control-file" id="inputImage" name="image" required>
+        <input type="file" multiple class="form-control-file" id="inputImage" name="image" required>
       </div>
       <div class="form-group">
         <label for="inputDescription">Description</label>
