--- a/views/admin/item/add-item.njk
+++ b/views/admin/item/add-item.njk
@@ -15,7 +15,7 @@
         <input type="text" name="city" id="inputCity" class="form-control" placeholder="Enter City" required>
       </div>
       <div class="form-group">
-        <label for="selectCategory">City</label>
+        <label for="selectCategory">Category</label>
         <select name="category" id="selectCategory" class="form-control" required>
           <option>--- Category ---</option>
           {% for category in categories %}
